--- a/index.html
+++ b/index.html
@@ -33,14 +33,27 @@
 
   <section class="section">
     <h2>Projects</h2>
+
     <div class="project">
-      <h3>Lead Management System</h3>
-      <p>Full Stack app with Node.js, Express, MongoDB</p>
+      <img src="images/lead-management.png" alt="Lead Management" />
+      <div>
+        <h3>Lead Management System</h3>
+        <p>Full Stack app using Node.js, Express, MongoDB.</p>
+      </div>
     </div>
+
     <div class="project">
-      <h3>Sentiment Analysis</h3>
-      <p>Python NLP project using TextBlob</p>
+      <img src="images/sentiment-analysis.png" alt="Sentiment Analysis" />
+      <div>
+        <h3>Sentiment Analysis</h3>
+        <p>Python NLP project using TextBlob and Seaborn.</p>
+      </div>
     </div>
+  </section>
+
+  <section class="section">
+    <h2>Contact Me</h2>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfDUMMY-FORM-ID/viewform?embedded=true" width="100%" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </section>
 
   <footer>
